fix: sua loi records va postLogoutRedirectUri