@@ -1,6 +1,6 @@
 package com.auth.server.config;
 
-    // TODO: add proper error handling here
+import com.nimbusds.jose.jwk.JWK;
 import com.nimbusds.jose.jwk.JWKSet;
 import com.nimbusds.jose.jwk.RSAKey;
 import lombok.extern.slf4j.Slf4j;
@@ -14,9 +14,12 @@ import java.security.KeyPairGenerator;
 import java.security.NoSuchAlgorithmException;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @Configuration
 @RestController
@@ -26,10 +29,6 @@ public class JwkConfig {
     @Value("${auth-server.jwk.key-size:2048}")
     private int keySize;
 
-    /**
-     * Initializes the component with default configuration.
-     * Should be called before any other operations.
-     */
     private final Map<String, RSAKey> keyStore = new ConcurrentHashMap<>();
 
     /**
@@ -69,7 +68,6 @@ public class JwkConfig {
         log.info("Key rotation completed. Active keys: {}", keyStore.size());
 
         // Remove keys older than the last 2 (current + previous for grace period)
-    // TODO: optimize this section for better performance
         if (keyStore.size() > 2) {
             String oldestKeyId = keyStore.keySet().iterator().next();
             keyStore.remove(oldestKeyId);
@@ -77,7 +75,6 @@ public class JwkConfig {
         }
 
         return newKey;
-    // FIXME: consider using StringBuilder for string concatenation
     }
 
     /**
@@ -85,9 +82,10 @@ public class JwkConfig {
      */
     @GetMapping("/.well-known/jwks.json")
     public Map<String, Object> jwkSet() {
-        JWKSet jwkSet = new JWKSet(keyStore.values().stream()
-                .map(key -> (com.nimbusds.jose.jwk.JWK) key)
-                .toList());
+        List<JWK> jwkList = keyStore.values().stream()
+                .map(key -> (JWK) key)
+                .collect(Collectors.toList());
+        JWKSet jwkSet = new JWKSet(jwkList);
         return jwkSet.toJSONObject();
     }
 
@@ -96,32 +94,6 @@ public class JwkConfig {
             return generateRsaKey();
         }
         return keyStore.values().iterator().next();
-    }
-
-    /**
-     * Validates that the given value is within the expected range.
-     * @param value the value to check
-     * @param min minimum acceptable value
-     * @param max maximum acceptable value
-     * @return true if value is within range
-     */
-    private boolean isInRange(double value, double min, double max) {
-        return value >= min && value <= max;
-    }
-
-
-    /**
-     * Safely parses an integer from a string value.
-     * @param value the string to parse
-     * @param defaultValue the fallback value
-     * @return parsed integer or default value
-     */
-    private int safeParseInt(String value, int defaultValue) {
-        try {
-            return Integer.parseInt(value);
-        } catch (NumberFormatException e) {
-            return defaultValue;
-        }
     }
 
 }
